# solana-hot-swap-operator-kit

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: check.yml
docs/: cherry-provider.md  deployment.md  identity-handoff.md  mainnet-cherry-run-context.md  openclaw-agent-playbook.md  openclaw-chatgpt.md  runbook.md  security.md  smoke-test.md  troubleshooting.md
examples/: cherry-order-payload.example.json  env.example
examples/openclaw/: relay.env.example
relay/: openclaw-codex-relay.mjs
scripts/: cherry-mainnet-one-shot.sh  import-cherry-reference.sh  import_cherry_reference.py  install-openclaw-chatgpt.sh  install.sh  notify-telegram.sh  openclaw_config_cleanup.py  redaction-check.py  solana-cherry-hotswap-guard.sh  solana-cherry-target-bootstrap.sh  solana-cherry-target-tmux-runner.sh  solana-cherry-target-tmux-start.sh  solana-identity-handoff.sh  solana-source-upload-keys.sh  solana-target-keydrop-setup.sh  solana-target-stage-keydrop-remote.sh  solana-target-stage-start-sync.sh  solana-testnet-upgrade-preflight.sh
solana_validator_hotswap/: cli.py  redaction.py
systemd/: openclaw-codex-relay.service.example  openclaw-gateway.service.example  solana-hotswap.service.example
templates/: session-start-prompt.md
